# webrtc_sfu_libdatachannel

./: CMakeLists.txt  README.md
include/: encoded_chunk.hpp  h264_rtp_packetizer.hpp  native_sfu.hpp
node/: README.md  binding.gyp  package-lock.json  package.json
node/public/: client.js  index.html  styles.css
node/scripts/: check-native-deps.mjs
node/src/: clientServer.ts  index.ts  nativeSfu.ts  signalingServer.ts
node/src/addon/: ldc_sfu_node.cpp
src/: encoded_chunk.cpp  h264_rtp_packetizer.cpp  main.cpp  native_sfu.cpp
web/: README.md
